"Adicionando Formulário com Banco de dados"

--- a/html/condicionais.html
+++ b/html/condicionais.html
@@ -7,15 +7,9 @@
 </head>
 <body>
     <script>
-        var idade = prompt ("Informe sua idade");
-        var nome = prompt ("Informe seu nome");
+        var nome = "Yonara Albert"
 
-        if (idade>=18) {
-            window.alert ('ola' + nome + 'voce tem' + idade + 'anos.');
-        } else {
-            window.alert ('você não tem idade para entrar');
-        }
-
+        console.log(nome);
         
     </script>
 </body>
