--- a/html/operadores.html
+++ b/html/operadores.html
@@ -7,28 +7,14 @@
 </head>
 <body>
     <script>
-       function somar (valorA, valorB){
-           var total = valorA + valorB;
-           return total;
-       }
-       function subtrair (valorA, valorB){
-           var total = valorA - valorB;
-           return total;
-       }
-       function dividir (valorA, valorB){
-           var total = valorA / valorB;
-           return total;
-       }
-       function multiplicar (valorA, valorB){
-           var total = valorA * valorB;
-           return total;
-       }
-
-      var soma = somar (4,5);
-      console.log( somar);
-      console.log(subtrair (2,6));
-      console.log(dividir (10,3));
-      console.log(multiplicar(15,3));
+        function menorNumero(numA = 20, numB =10){
+            if (numA > numB){
+            return numB;
+            }
+            else {
+            return numB; }
+            }
+ 
     </script>
 </body>
 </html>
